--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -16,7 +16,7 @@
   <body>
     <header>
       <nav>
-        <a href="/index.html" class="logo"
+        <a href="/index.html" class="logo dark"
           >Web<span class="logo-right">Studio</span></a
         >
         <ul class="site-nav list">
@@ -118,7 +118,7 @@
     </main>
     <footer class="page-footer">
       <div class="logo-group">
-        <a href="/index.html" class="logo light-theme"
+        <a href="/index.html" class="logo light"
           >Web<span class="logo-right">Studio</span></a
         >
         <p class="text">
