--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <nav>
-        <a href="/index.html" class="logo dark"
+        <a href="/index.html" class="logo dark link"
           >Web<span class="logo-right">Studio</span></a
         >
         <ul class="site-nav list">
@@ -29,12 +29,12 @@
       <address>
         <ul class="contacts list">
           <li>
-            <a href="mailto:info@devstudio.com" class="contacts-link"
+            <a href="mailto:info@devstudio.com" class="contacts-link link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="contacts-link"
+            <a href="tel:+110001111111" class="contacts-link link"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -44,23 +44,29 @@
     <main>
       <section class="section">
         <h1>Portfolio</h1>
-        <ul class="site-nav list">
-          <li><button class="section-button" type="button">All</button></li>
+        <ul class="filter list">
           <li>
-            <button class="section-button" type="button">Web Site</button>
+            <button class="filter-button button" type="button">All</button>
           </li>
           <li>
-            <button class="section-button" type="button">App</button>
+            <button class="filter-button button" type="button">Web Site</button>
           </li>
-          <li><button class="section-button" type="button">Design</button></li>
           <li>
-            <button class="section-button" type="button">Marketing</button>
+            <button class="filter-button button" type="button">App</button>
+          </li>
+          <li>
+            <button class="filter-button button" type="button">Design</button>
+          </li>
+          <li>
+            <button class="filter-button button" type="button">
+              Marketing
+            </button>
           </li>
         </ul>
 
         <!-- projects -->
 
-        <ul class="list">
+        <ul class="projects list">
           <li>
             <img
               src="images/img.jpg1.jpg"
@@ -118,12 +124,13 @@
     </main>
     <footer class="page-footer">
       <div class="logo-group">
-        <a href="/index.html" class="logo light"
+        <a href="/index.html" class="logo light link"
           >Web<span class="logo-right">Studio</span></a
         >
         <p class="text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
+          Increase the flow of customers and<br />
+          sales for your business with digital<br />
+          marketing & growth solutions.
         </p>
       </div>
     </footer>
