--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <header>
       <nav>
-        <a href="/index.html" class="logo dark"
+        <a href="/index.html" class="logo dark link"
           >Web<span class="logo-right">Studio</span></a
         >
         <ul class="site-nav list">
@@ -30,12 +30,12 @@
       <address>
         <ul class="contacts list">
           <li>
-            <a href="mailto:info@devstudio.com" class="contacts-link"
+            <a href="mailto:info@devstudio.com" class="contacts-link link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="contacts-link"
+            <a href="tel:+110001111111" class="contacts-link link"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -48,7 +48,7 @@
 
       <section class="hero">
         <h1 class="hero-title">Effective Solutions<br />for Your Business</h1>
-        <button class="hero-button" type="button">Order Service</button>
+        <button class="hero-button button" type="button">Order Service</button>
       </section>
 
       <!-- 📌==============================advantages  -->
@@ -161,12 +161,13 @@
 
     <footer class="page-footer">
       <div class="logo-group">
-        <a href="/index.html" class="logo light"
+        <a href="/index.html" class="logo light link"
           >Web<span class="logo-right">Studio</span></a
         >
         <p class="text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
+          Increase the flow of customers and<br />
+          sales for your business with digital<br />
+          marketing & growth solutions.
         </p>
       </div>
     </footer>
