--- a/portfolio.html
+++ b/portfolio.html
@@ -71,51 +71,60 @@
             <img
               src="images/img.jpg1.jpg"
               alt="Banking App Interface Concept"
+              width="360"
             />
             <h2 class="projects-title">Banking App Interface Concept</h2>
             <p class="projects-description">App</p>
           </li>
           <li>
-            <img src="images/img.jpg2.jpg" alt="Cashless Payment" />
+            <img src="images/img.jpg2.jpg" alt="Cashless Payment" width="360" />
 
             <h2 class="projects-title">Cashless Payment</h2>
             <p class="projects-description">Marketing</p>
           </li>
           <li>
-            <img src="images/img.jpg3.jpg" alt="Meditaion App" />
+            <img src="images/img.jpg3.jpg" alt="Meditaion App" width="360" />
             <h2 class="projects-title">Meditaion App</h2>
             <p class="projects-description">App</p>
           </li>
 
           <li>
-            <img src="images/img.jpg4.jpg" alt="Taxi Service" />
+            <img src="images/img.jpg4.jpg" alt="Taxi Service" width="360" />
 
             <h2 class="projects-title">Taxi Service</h2>
             <p class="projects-description">Marketing</p>
           </li>
           <li>
-            <img src="images/img.jpg5.jpg" alt="Screen Illustrations" />
+            <img
+              src="images/img.jpg5.jpg"
+              alt="Screen Illustrations"
+              width="360"
+            />
             <h2 class="projects-title">Screen Illustrations</h2>
             <p class="projects-description">Design</p>
           </li>
           <li>
-            <img src="images/img.jpg6.jpg" alt="Online Courses" />
+            <img src="images/img.jpg6.jpg" alt="Online Courses" width="360" />
             <h2 class="projects-title">Online Courses</h2>
             <p class="projects-description">Marketing</p>
           </li>
 
           <li>
-            <img src="images/img.jpg7.jpg" alt="Instagram Stories Concept" />
+            <img
+              src="images/img.jpg7.jpg"
+              alt="Instagram Stories Concept"
+              width="360"
+            />
             <h2 class="projects-title">Instagram Stories Concept</h2>
             <p class="projects-description">Design</p>
           </li>
           <li>
-            <img src="images/img.jpg8.jpg" alt="Organic Food" />
+            <img src="images/img.jpg8.jpg" alt="Organic Food" width="360" />
             <h2 class="projects-title">Organic Food</h2>
             <p class="projects-description">Web Site</p>
           </li>
           <li>
-            <img src="images/img.png9.jpg" alt="Fresh Coffee" />
+            <img src="images/img.png9.jpg" alt="Fresh Coffee" width="360" />
             <h2 class="projects-title">Fresh Coffee</h2>
             <p class="projects-description">Web Site</p>
           </li>
