--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
           >Web<span class="logo-right">Studio</span></a
         >
         <ul class="site-nav list">
-          <li><a href="/index.html" class="link">Studio</a></li>
+          <li><a href="./index.html" class="link">Studio</a></li>
           <li><a href="./portfolio.html" class="link current">Portfolio</a></li>
           <li><a href="" class="link">Contacts</a></li>
         </ul>
