--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <!-- 📌==============================advantages  -->
 
       <section class="section">
-        <h2>Advantages</h2>
+        <h2 class="visually-hidden">Advantages</h2>
         <ul class="list">
           <li>
             <h3 class="advantages-title">Strategy</h3>
