--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
     </header>
     <main>
       <section class="section">
-        <h1>Portfolio</h1>
+        <h1 class="visually-hidden">Portfolio</h1>
         <ul class="filter list">
           <li>
             <button class="filter-button button" type="button">All</button>
